--- a/index.html
+++ b/index.html
@@ -6,10 +6,46 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CovidSolutions</title>
+
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+
+    <!-- jQuery library -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+    <!-- Popper JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+
+    <!-- Latest compiled JavaScript -->
+    <script src="#"></script>
+    <title>CovidSolutions</title>
 </head>
 <body>
-    <h1>pranjali priya </h1>
-    <h2>Hello Pranjali</h2>
-    
+    <nav class="navbar navbar-expand-md bg-dark navbar-dark">
+        <!-- Brand -->
+        <a class="navbar-brand font-weight-bold" href="https://www.linkedin.com/in/anubhav-gupta-841aa7184/">COVID SOLUTIONS</a>
+      
+        <!-- Toggler/collapsibe Button -->
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <!-- Navbar links -->
+        <div class="collapse navbar-collapse" id="collapsibleNavbar">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+              <a class="nav-link font-weight-bold" href="#">HOME</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link font-weight-bold" href="#">YOUR SPACE</a>
+            </li>
+            <li class="nav-item font-weight-bold">
+              <a class="nav-link" href="#">FAQ</a>
+            </li>
+            <li class="nav-item font-weight-bold">
+                <a class="nav-link" href="#">ABOUT</a>
+              </li>
+          </ul>
+        </div>
+      </nav>
 </body>
 </html>
