--- a/index.html
+++ b/index.html
@@ -47,11 +47,30 @@
           </ul>
         </div>
       </nav>
-=======
-    <h1>pranjali priya </h1>
-    <h2>Hello Pranjali</h2>
-    <h3>Hello Anubhav</h3>
+
+      <!-- Sliding Images -->
+
+      <div id="demo" class="carousel slide m-0 p-0" data-ride="carousel" style="overflow: hidden;">
+
+        <!-- Indicators -->
+        <ul class="carousel-indicators">
+          <li data-target="#demo" data-slide-to="0" class="active"></li>
+          <li data-target="#demo" data-slide-to="1"></li>
+          <li data-target="#demo" data-slide-to="2"></li>
+        </ul>
     
->>>>>>> 2ecd1a2af9afb21094e6a007addb2879c7001cc2
+        <!-- The slideshow -->
+        <div class="carousel-inner m-auto">
+          <div class="carousel-item active">
+            <img src="images/img1.jpg" alt="Los Angeles">
+          </div>
+          <div class="carousel-item">
+            <img src="images/gallery02.jpg" alt="Chicago">
+          </div>
+          <div class="carousel-item">
+            <img src="images/gallery03.jpg" alt="New York">
+          </div>
+       </div>
+
 </body>
 </html>
