--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <img src="images/img1.jpg" alt="Los Angeles">
           </div>
           <div class="carousel-item">
-            <img src="images/gallery02.jpg" alt="Chicago">
+            <img src="images/img2.jpg.crdownload" alt="Chicago">
           </div>
           <div class="carousel-item">
             <img src="images/gallery03.jpg" alt="New York">
