--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
     <nav class="navbar navbar-expand-md bg-dark navbar-dark">
         <!-- Brand -->
-        <a class="navbar-brand font-weight-bold" href="https://www.linkedin.com/in/anubhav-gupta-841aa7184/">COVID SOLUTIONS</a>
+        <a class="navbar-brand font-weight-bold" href="https://www.linkedin.com/in/anubhav-gupta-841aa7184/">COVID POSITIVE</a>
       
         <!-- Toggler/collapsibe Button -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
