--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
           <li data-target="#demo" data-slide-to="0" class="active"></li>
           <li data-target="#demo" data-slide-to="1"></li>
           <li data-target="#demo" data-slide-to="2"></li>
+          <li data-target="#demo" data-slide-to="3"></li>
         </ul>
       
         <!-- The slideshow -->
@@ -67,9 +68,16 @@
                 <h3>Los Angeles</h3>
                 <p>We had such a great time in LA!</p>
               </div>
+            </div>
+            <div class="carousel-item">
+              <img src="images/img2.jpg" alt="Chicago" width="100%" height="600px">
+              <div class="carousel-caption">
+                  <h3>Los Angeles</h3>
+                  <p>We had such a great time in LA!</p>
+                </div>
           </div>
           <div class="carousel-item">
-            <img src="images/img2.jpg" alt="Chicago" width="100%" height="600px">
+            <img src="images/img4.jpg" alt="Chicago" width="100%" height="600px">
             <div class="carousel-caption">
                 <h3>Los Angeles</h3>
                 <p>We had such a great time in LA!</p>
