changes in covid essential

--- a/index.html
+++ b/index.html
@@ -63,28 +63,28 @@
         <!-- The slideshow -->
         <div class="carousel-inner" >
           <div class="carousel-item active">
-            <img src="images/img1.jpg" alt="Los Angeles" width="100%" height="600px">
+            <img src="images/img5.jpg" alt="Los Angeles" width="100%" height="600px">
             <div class="carousel-caption">
                 <h3>Los Angeles</h3>
                 <p>We had such a great time in LA!</p>
               </div>
             </div>
             <div class="carousel-item">
-              <img src="images/img2.jpg" alt="Chicago" width="100%" height="600px">
+              <img src="images/img6.jpg" alt="Chicago" width="100%" height="600px">
               <div class="carousel-caption">
                   <h3>Los Angeles</h3>
                   <p>We had such a great time in LA!</p>
                 </div>
           </div>
           <div class="carousel-item">
-            <img src="images/img4.jpg" alt="Chicago" width="100%" height="600px">
+            <img src="images/img7.jpg" alt="Chicago" width="100%" height="600px">
             <div class="carousel-caption">
                 <h3>Los Angeles</h3>
                 <p>We had such a great time in LA!</p>
               </div>
           </div>
           <div class="carousel-item">
-            <img src="images/img3.jpg" alt="New York"  width="100%" height="600px">
+            <img src="images/img1.jpg" alt="New York"  width="100%" height="600px">
             <div class="carousel-caption">
                 <h3>Los Angeles</h3>
                 <p>We had such a great time in LA!</p>
@@ -101,6 +101,78 @@
         </a>
       <!--sliding images part end --> 
       </div>
+      
+         <!-- COVID ESSENTIALS -->
+      <!-- <div class="container" height="1000px">
+         <h2 class="heading text-center font-weight-bold">COVID ESSENTIALS</h2>
+      
+      <div class="dropdown">
+        <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
+          MEDICAL KIT
+        </button>
+        <div class="dropdown-menu">
+          <a class="dropdown-item" href="#">MEDICINES</a>
+          <a class="dropdown-item" href="#">FOOD TO EAT</a>
+          <a class="dropdown-item" href="#">EXERCISES TO DO</a>
+        </div>
+      </div>
+      <div class="dropdown">
+        <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
+          FOOD TO EAT
+        </button>
+        <div class="dropdown-menu">
+          <a class="dropdown-item" href="#">MEDICINES</a>
+          <a class="dropdown-item" href="#">FOOD TO EAT</a>
+          <a class="dropdown-item" href="#">EXERCISES TO DO</a>
+        </div>
+      </div>
+      <div class="dropdown">
+        <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
+          EXERCISES TO DO
+        </button>
+        <div class="dropdown-menu">
+          <a class="dropdown-item" href="#">MEDICINES</a>
+          <a class="dropdown-item" href="#">FOOD TO EAT</a>
+          <a class="dropdown-item" href="#">EXERCISES TO DO</a>
+        </div>
+      </div>
+    </div> -->
+    <section class="portfolio bg-light my-3 ">
+      <div class="container text-center">
+           <h1>COVID ESSENTIALS</h1>
+           <p>These are where you can search the essentials related to COVID-19</p>
+
+           <div class="row my-6">
+               <div class="col-lg-4 col-md-4 col-sm-4 col-10 d-block m-auto">
+                   <div class="card">
+                       <img src="images/ex1.jpg" class="card-img img-fluid">
+                       <div class="card-body">
+                           <h2 class="card-title">Exercise To Do</h2>
+                           <p class="card-text">Exercise</p>
+                       </div>
+                   </div>
+               </div>
+               <div class="col-lg-4 col-md-4 col-sm-4 col-10 d-block m-auto">
+                   <div class="card">
+                       <img src="images/ex6.jpg" class="card-img img-fluid">
+                       <div class="card-body">
+                           <h2 class="card-title">Food</h2>
+                           <p class="card-text">Food to Eat</p>
+                       </div>
+                   </div>
+               </div>
+               <div class="col-lg-4 col-md-4 col-sm-4 col-10 d-block m-auto">
+                   <div class="card">
+                       <img src="images/ex4.jpg" class="card-img img-fluid" >
+                       <div class="card-body">
+                           <h2 class="card-title">Medical</h2>
+                           <p class="card-text">Medicines and Medical Kit</p>
+                       </div>
+                   </div>
+               </div>
+           </div>
+      </div>
+   </section>
 
 
 </body>
