--- a/indexdemo.html
+++ b/indexdemo.html
@@ -24,7 +24,7 @@
     <title>Covid19</title>
 </head>
 <body>
-
+<!-- 
     <nav class="navbar navbar-expand-md  py-3 ">
       
         <!-- Brand -->
@@ -189,9 +189,44 @@
                </div>
            </div>
       </div>
-   </section>
-
+   </section> -->
+   <nav class="navbar navbar-expand-md py-0 bg-dark navbar-dark">
+    <div class="container">
+        <a href="https://www.linkedin.com/in/anubhav-gupta-841aa7184/" class="navbar-brand text-warning font-weight-bold">Anubhav Gupta</a>
+  
+        <!-- for side menu button when mobile view is open -->
+        <button class = "navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsenavbar">
+            <span class="navbar-toggler-icon"> </span>
+        </button>
+        <div class="navbar-collapse text-center" id="collapsenavbar">
+            <ui class="navbar-nav ml-auto py-3">
+                <li class="nav-item">
+                    <a href="" class="nav-link text-white font-weight-bold">SERVICES</a>
+                </li>
+                <li class="nav-item">
+                    <a href="" class="nav-link text-white font-weight-bold">PORTFOLIO</a>
+                </li>
+                <li class="nav-item">
+                    <a href="" class="nav-link text-white font-weight-bold">ABOUT</a>
+                </li>
+                <li class="nav-item">
+                    <a href="" class="nav-link text-white font-weight-bold">TEAM</a>
+                </li>
+                <li class="nav-item">
+                    <a href="" class="nav-link text-white font-weight-bold">CONTACT</a>
+                </li>
+            </ui>
+        </div>
+    </div>
+  </nav>
+  
 
 
 </body>
 </html>
+
+
+
+
+
+
