--- a/c.html
+++ b/c.html
@@ -11,28 +11,32 @@
     <!-- The slideshow -->
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="images/img5.jpg" alt="Los Angeles" width="100%" height="600px">
+        <img src="images/img5.jpg" alt="Los Angeles" width="100%" height="760px">
+        <div class="carousel-caption">
+          <h3></h3>
+          <p></p>
+        </div>
+
+      </nav>
+      
+    
+   
+ <!-- Sliding Images -->
+
+ <div id="demo" class="carousel slide" data-ride="carousel">
+
+ 
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="images/img7.jpg" alt="Chicago" width="100%" height="760px">
         <div class="carousel-caption">
           <h3></h3>
           <p></p>
         </div>
       </div>
       <div class="carousel-item">
-        <img src="images/img6.jpg" alt="Chicago" width="100%" height="600px">
-        <div class="carousel-caption">
-          <h3></h3>
-          <p></p>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <img src="images/img7.jpg" alt="Chicago" width="100%" height="600px">
-        <div class="carousel-caption">
-          <h3></h3>
-          <p></p>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <img src="images/img1.jpg" alt="New York" width="100%" height="600px">
+        <img src="images/img1.jpg" alt="New York" width="100%" height="760px">
         <div class="carousel-caption">
           <h3></h3>
           <p></p>
