--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <button class = "navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsenavbar">
         <span class="navbar-toggler-icon"> </span>
     </button>
-      <div class="navbar-collapse text-center" id="collapsenavbar">
+      <div class="navbar-collapse text-center text-white" id="collapsenavbar">
         <ui class="navbar-nav ml-auto py-3">
             <li class="nav-item">
                 <a href="" class="nav-link text-white font-weight-bold">HOME</a>
@@ -75,13 +75,18 @@
       
     </nav>
     <br>
-    <div class="row">
-     
-      <div class="col-md-12 col-sm-12 col-xs-12 text-center"> <a href="c.html" class="btn btn-sm animated-button thar-four slide-in-elliptic-left-fwd">GET STARTED<svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="red" class="bi bi-arrow-right" viewBox="0 0 16 16">
+    <!-- <div class="row">
+      <div class="col-md-4 col-sm-4 col-xs-4"> <a href="c.html" class="btn btn-sm animated-button thar-four slide-in-elliptic-left-fwd">GET STARTED<svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="red" class="bi bi-arrow-right" viewBox="0 0 16 16">
         <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z"/>
       </svg></a> </div>
+    </div> -->
+    <div class="row">
+      <div class="col-sm-4 col-md-4 col-lg-4"></div>
+      <div class="col-sm-4 col-md-4 col-lg-4 text-center"><a ><button class="b1" style="margin-top: 250px; width: 250px; height:50px ">GET STARTED</button></a></div>
+      <div class="col-sm-4 col-md-4 col-lg-4"></div>
     </div>
-    <h2 class="mid-text text-white font-weight-bold">STAY HOME <i class="fas fa-home"></i> STAY SAFE <i class="fas fa-user-shield"></i></h2>
+  <!-- </div> -->
+    <h2 class="mid-text text-white font-weight-bold text-center">STAY HOME <i class="fas fa-home"></i> STAY SAFE <i class="fas fa-user-shield"></i></h2>
   </div>
 
   <div id="demo" class="carousel slide" data-ride="carousel">
