--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     </div> -->
     <div class="row">
       <div class="col-sm-4 col-md-4 col-lg-4"></div>
-      <div class="col-sm-4 col-md-4 col-lg-4 text-center"><a ><button class="b1" style="margin-top: 250px; width: 250px; height:50px ">GET STARTED</button></a></div>
+      <div class="col-sm-4 col-md-4 col-lg-4 text-center"><a ><button class="b1 slide-in-elliptic-left-fwd" style="margin-top: 250px; width: 250px; height:50px ">GET STARTED</button></a></div>
       <div class="col-sm-4 col-md-4 col-lg-4"></div>
     </div>
   <!-- </div> -->
