--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
   <!--<link href="css/button.scss" rel="stylesheet/scss" type="text/css"> -->
 
   <link rel="stylesheet" href="css/button.css">
-  <link rel="stylesheet" href="css/button.pug">
 
   <!-- jQuery library -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -147,35 +146,161 @@
   </div>
 
 
-    <!--footer part -->
-    <div class="container py-5 overflow-hidden  ">
-      <div class="content">
-       
-        <div class="icon-container">
-          <div class="icon icon-fill">
-            <a href="#"><i class="fab fa-facebook-f"></i></a>
-          </div>
-          <div class="icon icon-enter">
-            <a href="#"><i class="fab fa-instagram"></i></a>
-          </div>
-          <div class="icon icon-expand">
-            <a href="#"><i class="fab fa-twitter"></i></a>
-          </div>
-          <div class="icon icon-collapse">
-            <a href="#"><i class="fab fa-linkedin"></i></a>
-          </div>
-          <div class="icon icon-rotate">
-            <a href="#"><i class="fa fa-phone"></i></a>
-          </div>
+
+<!-- Footer -->
+<footer class="page-footer bg-light font-small elegant-color">
+
+  <div class="color-primary">
+    <div class="container">
+
+      <!-- Grid row-->
+      <div class="row py-4 d-flex align-items-center">
+
+        <!-- Grid column -->
+        <div class="col-md-6 col-lg-5 text-center text-md-left mb-4 mb-md-0">
+          <h6 class="mb-0">Get connected with us on social networks!</h6>
         </div>
-        <h6 style="padding-top: 1em;">© 2021 Copyright: <a href="#">COVID19.org</a></h6>
+        <!-- Grid column -->
+
+        <!-- Grid column -->
+        <div class="col-md-6 col-lg-7 text-center text-md-right">
+
+          <!-- Facebook -->
+          <a class="fb-ic">
+            <i class="fab fa-facebook-f white-text mr-4"> </i>
+          </a>
+          <!-- Twitter -->
+          <a class="tw-ic">
+            <i class="fab fa-twitter white-text mr-4"> </i>
+          </a>
+          <!-- Google +-->
+          <a class="gplus-ic">
+            <i class="fab fa-google-plus-g white-text mr-4"> </i>
+          </a>
+          <!--Linkedin -->
+          <a class="li-ic">
+            <i class="fab fa-linkedin-in white-text mr-4"> </i>
+          </a>
+          <!--Instagram-->
+          <a class="ins-ic">
+            <i class="fab fa-instagram white-text"> </i>
+          </a>
+
+        </div>
+        <!-- Grid column -->
+
       </div>
+      <!-- Grid row-->
+
     </div>
+  </div>
 
-    <!-- footer part end -->
+  <!-- Footer Links -->
+  <div class="container text-center text-md-left pt-4 pt-md-5">
 
+    <!-- Grid row -->
+    <div class="row mt-1 mt-md-0 mb-4 mb-md-0">
 
-    <!-- Footer -->
+      <!-- Grid column -->
+      <div class="col-md-3 mx-auto mt-3 mt-md-0 mb-0 mb-md-4">
+
+        <!-- Links -->
+        <h5>About us</h5>
+        <hr class="color-primary mb-4 mt-0 d-inline-block mx-auto w-60">
+
+        <p class="foot-desc mb-0">We are a team of three developers : ANUBHAV GUPTA ,KISHAN KUMAR, PRANJALI PRIYA</p>
+
+      </div>
+      <!-- Grid column -->
+
+      <hr class="clearfix w-100 d-md-none">
+
+      <!-- Grid column -->
+      <div class="col-md-3 mx-auto mt-3 mt-md-0 mb-0 mb-md-4">
+
+        <!-- Links -->
+        <h5>Products</h5>
+        <hr class="color-primary mb-4 mt-0 d-inline-block mx-auto w-60">
+
+        <ul class="list-unstyled foot-desc">
+          <li class="mb-2">
+            <a href="#!">MDBootstrap</a>
+          </li>
+          <li class="mb-2">
+            <a href="#!">MDWordPress</a>
+          </li>
+          <li class="mb-2">
+            <a href="#!">BrandFlow</a>
+          </li>
+          <li class="mb-2">
+            <a href="#!">Bootstrap Angular</a>
+          </li>
+        </ul>
+
+      </div>
+      <!-- Grid column -->
+
+      <hr class="clearfix w-100 d-md-none">
+
+      <!-- Grid column -->
+      <div class="col-md-3 mx-auto mt-3 mt-md-0 mb-0 mb-md-4">
+
+        <!-- Links -->
+        <h5>Useful links</h5>
+        <hr class="color-primary mb-4 mt-0 d-inline-block mx-auto w-60">
+
+        <ul class="list-unstyled foot-desc">
+          <li class="mb-2">
+            <a href="#!">Your Account</a>
+          </li>
+          <li class="mb-2">
+            <a href="#!">Become an Affiliate</a>
+          </li>
+          <li class="mb-2">
+            <a href="#!">Shipping Rates</a>
+          </li>
+          <li class="mb-2">
+            <a href="#!">Help</a>
+          </li>
+        </ul>
+
+      </div>
+      <!-- Grid column -->
+
+      <hr class="clearfix w-100 d-md-none">
+
+      <!-- Grid column -->
+      <div class="col-md-3 mx-auto mt-3 mt-md-0 mb-0 mb-md-4">
+
+        <!-- Links -->
+        <h5>Contacts</h5>
+        <hr class="color-primary mb-4 mt-0 d-inline-block mx-auto w-60">
+
+        <ul class="fa-ul foot-desc ml-4">
+          <li class="mb-2"><span class="fa-li"><i class="far fa-map"></i></span>New York, Avenue Street 10
+          </li>
+          <li class="mb-2"><span class="fa-li"><i class="fas fa-phone-alt"></i></span>042 876 836 908</li>
+          <li class="mb-2"><span class="fa-li"><i class="far fa-envelope"></i></span>company@example.com</li>
+          <li><span class="fa-li"><i class="far fa-clock"></i></span>Monday - Friday: 10-17</li>
+        </ul>
+
+      </div>
+      <!-- Grid column -->
+
+    </div>
+    <!-- Grid row -->
+
+  </div>
+  <!-- Footer Links -->
+
+  <!-- Copyright -->
+  <div class="footer-copyright text-center py-3">© 2020 Copyright:
+    <a href="#">Covid19.org</a>
+  </div>
+  <!-- Copyright -->
+
+</footer>
+<!-- Footer -->
   </body>
 
 </html>
